internal/gatewayapi/testdata/extensions/extensionpolicy-with-tcproute-target.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: tcp
      protocol: TCP
      port: 8163
      allowedRoutes:
        namespaces:
          from: All
        kinds:
        - kind: TCPRoute
tcpRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TCPRoute
  metadata:
    namespace: default
    name: tcproute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: tcp
    rules:
    - backendRefs:
      - name: service-1
        port: 8163
extensionServerPolicies:
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    name: policy-1
    namespace: default
  spec:
    targetRef:
      kind: TCPRoute
      group: gateway.networking.k8s.io
      name: tcproute-1
    data: "targets an unsupported route kind"
