internal/gatewayapi/testdata/extensions/extensionpolicy-with-tcproute-target.out.yaml
extensionServerPolicies:
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    name: policy-1
    namespace: default
  spec:
    data: targets an unsupported route kind
    targetRef:
      group: gateway.networking.k8s.io
      kind: TCPRoute
      name: tcproute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tcp
      conditions:
      - lastTransitionTime: null
        message: ExtensionServerPolicy does not support targeting TCPRoute
        reason: Invalid
        status: "False"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        kinds:
        - kind: TCPRoute
        namespaces:
          from: All
      name: tcp
      port: 8163
      protocol: TCP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tcp
      supportedKinds:
      - kind: TCPRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-1/tcp
        ports:
        - containerPort: 8163
          name: tcp-8163
          protocol: TCP
          servicePort: 8163
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: ""
tcpRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TCPRoute
  metadata:
    name: tcproute-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: tcp
    rules:
    - backendRefs:
      - name: service-1
        port: 8163
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tcp
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    extensionServerPolicies:
    - object:
        apiVersion: foo.example.io/v1alpha1
        kind: Bar
        metadata:
          name: policy-1
          namespace: default
        spec:
          data: targets an unsupported route kind
          targetRef:
            group: gateway.networking.k8s.io
            kind: TCPRoute
            name: tcproute-1
        status:
          ancestors:
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: Gateway
              name: gateway-1
              namespace: envoy-gateway
              sectionName: tcp
            conditions:
            - lastTransitionTime: null
              message: ExtensionServerPolicy does not support targeting TCPRoute
              reason: Invalid
              status: "False"
              type: Accepted
            controllerName: gateway.envoyproxy.io/gatewayclass-controller
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 8163
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tcp
      name: envoy-gateway/gateway-1/tcp
      port: 8163
      routes:
      - destination:
          metadata:
            kind: TCPRoute
            name: tcproute-1
            namespace: default
          name: tcproute/default/tcproute-1/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8163
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8163"
            name: tcproute/default/tcproute-1/rule/-1/backend/0
            protocol: TCP
            weight: 1
        metadata:
          kind: TCPRoute
          name: tcproute-1
          namespace: default
        name: tcproute/default/tcproute-1
